test/expected/declare_ud.out
declare x as unsigned double
        ^
9: error: "unsigned double" is illegal for built-in type
